Improved the text of the Rubah unsafe post