@@ -14,18 +14,23 @@ highlight:	true
 raphael:		true
 ---
 
-In this post explain how Rubah uses sun.misc.Unsafe to implement the
-optimizations that make its performance so good. I start by explaining what
-sun.misc.Unsafe is, then I describe what the object memory layout of the Oracle
-HotSpot JVM and how to explore it with sun.misc.Unsafe, then I discuss how Rubah
-does that to optimize supporting Dynamic Software Updates, and finally I propose
-how to make some of the operations the API exports safer in a way that is
-compatible with Rubah.
+[Rubah]({{ site.url }}/rubah.html) is a Dynamic Software Updating system for Java that works on the stock
+Oracle HotSpot JVM, does not add any measurable overhead when running a program,
+and performs dynamic software updates efficiently.
+
+In this post, I explain how Rubah uses the low-level unsafe operations available
+in class `sun.misc.Unsafe` (which I shall refer to as the unsafe API) to
+implement the optimizations that make it so efficient.  I start by explaining
+what the unsafe API is and how to use it, then I describe the object memory
+layout of the Oracle HotSpot JVM and how to explore it with the unsafe API, then
+I discuss how Rubah does that to improve its performance, and finally I propose
+how to make some of the unsafe operations safer in a way that is compatible with
+Rubah.
 
 What is sun.misc.Unsafe?
 ========================
 
-The class sun.misc.Unsafe is a proprietary API that enables a Java program to
+The class `sun.misc.Unsafe` is a proprietary API that enables a Java program to
 escape the control of the JVM and perform potentially unsafe operations, like
 direct memory manipulation. Here is a list of interesting methods that this API
 has ([more documentation available
@@ -67,7 +72,7 @@ public class Unsafe {
 </code></pre>
 
 For instance, the following code sets an entire integer array to 1 using the
-unsafe API to avoid any bounds check.
+unsafe API to avoid any bounds check:
 
 <pre><code class="java">
 // For this to work, add the class to the bootstrap classloader by passing
@@ -87,20 +92,20 @@ for (int i = 0 ; i < size ; i++)
 // u.getInt(array, (base + size * scale));
 </code></pre>
 
-While this is indeed faster than regular Java array manipulation, it may lead to
-out-of-bounds operations that can be [exploited
+While this is faster than regular Java array manipulation, it may lead to
+out-of-bounds accesses that [can be exploited
 maliciously](http://en.wikipedia.org/wiki/Heartbleed).
 
-The unsafe API is used extensively throughout the java.util.concurrent package
+The unsafe API is used extensively throughout the `java.util.concurrent` package
 to perform atomic compare-and-swap operations and volatile read/write on arrays.
 Currently, that is the only way to do those operations. However, the Oracle JVM
 development team is looking into ways to make this API safe and part of the Java
 API.
 
-Most of these operations can also be made through JNI native code. However,
-using the unsafe API is more efficient because it avoids the cost of context
-switch from Java to JNI and back. Besides, the JIT compiles some calls to the
-unsafe API directly to JVM intrinsics[^intrinsics].
+Most of the low-level memory operations can also be made through JNI native
+code. However, using the unsafe API is more efficient because it avoids the cost
+of switching context from Java to JNI and back. Besides, the JIT compiles some
+calls to the unsafe API directly to JVM intrinsics[^intrinsics].
 
 [^intrinsics]:
 
@@ -120,40 +125,45 @@ unsafe API directly to JVM intrinsics[^intrinsics].
 	is compiled to an intrinsic operation that just reads the hash code from the
 	object header in a few native instructions, rather than to a method call.
 
-HotSpot (and OpenJDK) JVM memory model
-======================================
+HotSpot JVM object memory layout
+================================
 
 There is a code pattern when using the unsafe API to manipulate data in object
-fields or arrays.  The code in TODO2 shows an example of that pattern. First, it
-gets a base pointer with method TODO. Then, it gets the array scale factor with
-method TODO. Finally, it computes the formula TODO to access position i on the
-array.
+fields or arrays.  The code above shows an example of that pattern: First, it
+gets a base pointer with method `arrayBaseOffset`, then, it gets the array scale
+factor with method `arrayIndexScale`, and ,finally, it computes the formula
+`base + i * scale` to manipulate position `i` on the array with methods `getInt`
+or `putInt`.
 
-A similar pattern applies to manipulating objects, as we can see in the
-following example:
+A similar pattern applies to manipulating objects, the following example shows:
 
 <pre><code class="java">
 // For this to work, add the class to the bootstrap classloader by passing
 // the option -Xbootclasspath/a:. to the java command
-Unsafe u     = Unsafe.getUnsafe();
-LinkedList l = new LinkedList();
-Class c      = LinkedList.class;
-Field f      = c.getDeclaredField("first");
-long  offset = u.objectFieldOffset(f);
+Unsafe u       = Unsafe.getUnsafe();
+LinkedList obj = new LinkedList();
+Class c        = LinkedList.class;
+Field f        = c.getDeclaredField("first");
+long  offset   = u.objectFieldOffset(f);
 
-u.getObject(l, offset);
-u.putObject(l, offset, null);
+u.getObject(obj, offset);
+u.putObject(obj, offset, null);
 
-// Nothing prevents me writting a wrong type:
-// u.putObject(l, offset, new Object());
+// Nothing prevents me from writting a wrong type:
+// u.putObject(obj, offset, c);
 </code></pre>
 
-Again, it starts by getting the base pointer with method TODO. Then, it gets the
-offset of the field within the object with method TODO. And finally, it
-manipulates the field with method TODO.
+For manipulating object fields, we do not get a base pointer and a scale factor.
+We get, instead, the offset of each individual field with method
+`objectFieldOffset`.  We can then manipulate object fields using methods
+`getObject` and `putObject`.  Note that these are the same methods as in the
+previous example: If field `first` had type `int`, we would use methods `getInt`
+and `putInt`.
 
-This code pattern maps directly to the way the JVM lays objects in memory. The
-following figure shows how objects look in memory:
+Both these code patterns map directly to how the JVM lays objects in memory. The
+following figure shows how objects look in memory (memory addresses of
+variables/fields from the code above are writen in a C-like style with a
+preceding `&`):
 
 <div id="obj_layout" style="width: 100%; height: 150px" >
 </div>
@@ -196,7 +206,7 @@ following figure shows how objects look in memory:
 	paper.setViewBox(0, 0, w, h, true);
 	paper.canvas.setAttribute('preserveAspectRatio', 'none');	
 
-	var mark	= paper.rect(30, 30, w_len, 30).attr({
+	var mark	= paper.rect(30, 40, w_len, 30).attr({
       fill : "white",
       stroke : "black",
       strokeWidth : 2
@@ -219,11 +229,31 @@ following figure shows how objects look in memory:
 
 	var field1 = klass.clone();
 	field1.transform("t" + 2 * w_len + ",0");
-	addLabelToWord(field1, "field 1");
+	addLabelToWord(field1, "first");
 
 	var fieldN = klass.clone();
 	fieldN.transform("t" + 3.5 * w_len + ",0");
-	addLabelToWord(fieldN, "field N");
+	addLabelToWord(fieldN, "last");
+
+	var bbox = mark.getBBox(false);
+	paper.path("M"+bbox.x+",20L" + bbox.x + ","+(bbox.y-5)).attr({
+		"arrow-end": "classic-wide-long"
+	});
+	paper.text(bbox.x, 10, '&obj').attr({
+		"font-size": 14,
+		"text-anchor": "middle"
+	});
+
+	var bbox = field1.getBBox(false);
+	paper.path("M"+bbox.x+",20L" + bbox.x + ","+(bbox.y-5)).attr({
+		"arrow-end": "classic-wide-long"
+	});
+	paper.text(bbox.x, 10, '&obj + offset').attr({
+		"font-size": 14,
+		"text-anchor": "middle"
+	});
+	
+	
 
 </script>
 
@@ -235,14 +265,15 @@ sized header that has two fields, as defined by the header file
 
 * **_mark**:
 	Defined in header file
-[src/share/vm/oops/markOop.hpp](http://hg.openjdk.java.net/jdk7u/jdk7u/hotspot/file/f49c3e79b676/src/share/vm/oops/markOop.hpp). One word (32 or 64 bits, depending on the architecture) that contains either:
-	* Regular case:
-		* **hash** Identity hash code;
-		* **age**  GC information about the age of the object;
-		* Some unused bits to keep the _mark field word-aligned;
-	* Locked object:
-		* **ptr**  pointer to where the header is (either on the stack or wrapped by an inflated lock);
-		* **lock** state of the lock (biased/inflated), 001 means not locked;
+[src/share/vm/oops/markOop.hpp](http://hg.openjdk.java.net/jdk7u/jdk7u/hotspot/file/f49c3e79b676/src/share/vm/oops/markOop.hpp).
+One word that contains either:
+	* Unlocked object:
+		* **hash**: Identity hash code;
+		* **age**:  GC information about the age of the object;
+		* Some unused bits to keep the field word-aligned;
+	* Locked object[^locking]:
+		* **ptr**:  pointer to where the header is (either on the stack or wrapped by an inflated lock);
+		* **lock**: state of the lock (biased/inflated), 001 means not locked;
 * **_klass**: Defined in header file
 [src/share/vm/oops/klassOop.hpp](http://hg.openjdk.java.net/jdk7u/jdk7u/hotspot/file/f49c3e79b676/src/share/vm/oops/klassOop.hpp).
 Quoting the source: "A klassOop is the C++ equivalent of a Java class".
@@ -250,21 +281,39 @@ This is where the vtable is located, together with more low level information
 about each object of each particular class, such as its size and the offset where
 to find each field.
 
-The header of an array also starts with the same two fields.  It has, however,
-an extra field, as defined by header file 
+[^locking]:
+	Locking in the JVM is complex, using both biased and thin locks, which I
+	do not discuss in this post for the sake of simplicity.  From the JVM
+	documentation:
+
+	> **-XX:+UseBiasedLocking** Enables a technique for improving the performance
+	> of uncontended synchronization. An object is "biased" toward the thread
+	> which first acquires its monitor via a `monitorenter` bytecode or
+	> `synchronized` method invocation; subsequent monitor-related operations
+	> performed by that thread are relatively much faster on multiprocessor
+	> machines. Some applications with significant amounts of uncontended
+	> synchronization may attain significant speedups with this flag enabled; some
+	> applications with certain patterns of locking may see slowdowns, though
+	> attempts have been made to minimize the negative impact.
+
+	Thin locks are explained in the paper [Thin locks: featherweight
+	Synchronization for
+	Java](http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.42.1683)
+
+Arrays also have a header that starts with the same two fields, followed by an
+extra field, as defined by header file
 [src/share/vm/oops/arrayOop.hpp](http://hg.openjdk.java.net/jdk7u/jdk7u/hotspot/file/f49c3e79b676/src/share/vm/oops/arrayOop.hpp):
 
-* **lenght**: Size of this particular array
+* **lenght**: Number of elements in this particular array
 
 Manipulating the object model
 =============================
 
-As you can imagine by now, Rubah uses the unsafe API to manipulate the metadata
-on the object header. This is extremely unsafe [^portability] and getting it
-right was itself an important implementation challenge. Doing this is also very
-brittle because the unsafe API is not part of the standard Java API.  Future
-versions of the HotSpot JVM are free to change how objects are layed out in
-memory.
+Rubah uses the unsafe API to manipulate the metadata on the object header. This
+is extremely unsafe[^portability] and getting it right was itself an important
+implementation challenge. This is also brittle because the unsafe API is
+not part of the standard Java API.  Future versions of the HotSpot JVM are free
+to change how objects are layed out in memory.
 
 [^portability]:
 
@@ -284,10 +333,11 @@ using the unsafe API:
 * **Direct field access**
 
 	To migrate the program state, Rubah needs to traverse every object it finds.
-	This means accessing every field, which might not be visible. The unsafe API
-	enables Rubah to access every field of every object in a very fast way.
+	This means accessing every field, which may not be publicly visible. The unsafe
+	API gives Rubah unrestricted and efficient access to every field of every
+	object.
 
-	Also, both the migration algorithms that Rubah has (parallel and lazy) use
+	Also, both migration algorithms that Rubah has (parallel and lazy) use
 	compare-and-swap to ensure correctness while migrating the program state. The
 	unsafe API is the only way to perform this operation on regular fields.[^cas]
 
@@ -302,29 +352,36 @@ using the unsafe API:
 * **Identity hash-code**
 
 	Rubah migrates objects between versions while keeping their identity. It does
-	so by creating a new object in the new version that will take the place of the
-	old one, and then migrating the state of the old object to the new one. When
+	so by creating a new object in the new version that will replace the outdated
+	one, and then migrating the state of the old object to the new one. When
 	traversing the program state, Rubah replaces all references to the old object by
-	references to the new one. This way, if two references == each other in the
-	old version, they will also == after the update takes place.
+	references to the new one. This way, if two references are `==` to each other in
+	the old version, they will also be `==` after the update takes place.
 
-	However, the identity hash-code of such two objects will differ. If the class
-	does not override the hashCode method and the program keeps these objects in an
-	HashMap, which is perfectly valid, then Rubah would break the semantics of the
-	program: After the update, the objects will be on the wrong buckets of the
-	HashMap and, therefore, impossible to find.
+	However, the identity hash-code of such two objects will differ, and this can
+	break the program semantics.  For instance, if the class does not override the
+	`hashCode()` method and the program keeps these objects in a `java.util.HashMap`,
+	which is perfectly valid, then Rubah would break the semantics of the program:
+	After the update, the objects will be on the wrong buckets of the HashMap and,
+	therefore, impossible to find.
 
-	Initially Rubah changed the bytecode of all classes, adding an extra field to
-	keep the identity hash-code which was initialized on every constructor.
-	Rubah also added the hashCode method to all classes that did not have any.
-	Migrating the identity hash-code was not just a matter of migrating another
-	field. However, this prevents the JIT compiler to use intrinsic operations to access
-	the identity hash-code efficiently. As a result, this added about 5% overhead to
-	steady-state execution. Also, it does not work for arrays.[^overhead]
+	Initially, Rubah solved this problem by rewritting the bytecode of all classes
+	to add an extra field to keep the identity hash-code and to change every
+	constructor to initialize such field.  Rubah also added an `hashCode()` method
+	to all classes that did not have any that just returned the value of the extra
+	field.  With this semantics preserving rewritting, migrating the identity
+	hash-code between versions is just a matter of copying a field. However, this
+	prevents the JIT compiler to use intrinsics to access the identity hash-code
+	efficiently and prevented the JVM from initializing hash-codes lazily. As a
+	result, this added about 5% overhead to steady-state execution. Also, it does
+	not work for arrays.[^overhead]
 
 	Rubah now writes the identity hash-code of the new instance directly in the
 	object header using the unsafe API. This works objects and arrays and removes
-	the performance overhead.
+	the performance overhead.  The following code example, adapted from a class in
+	Rubah called
+	[UnsafeUtils](https://github.com/plum-umd/rubah/blob/master/src/main/java/rubah/runtime/state/migrator/UnsafeUtils.java),
+	shows how Rubah does that:
 
 <pre><code class="java">
 // For this to work, add the class to the bootstrap classloader by passing
@@ -352,41 +409,50 @@ assert (identityHashCode == unsafeHashCode == newHash);
 	
 * **Changing the class of existing objects**
 
-	Rubah's' lazy algorithm introduces the concept of proxies. These extend the
-	proxied class and just override all methods so that Rubah can intercept any
-	method call on a proxy. At the object layout level, this means that proxies
-	have the same fields on the same offset but a different vtable with different
-	methods. So, all Rubah needs to do is to install that vtable on existing
-	objects to turn them into proxies.
+	Rubah's' lazy program state migration algorithm introduces the concept of
+	proxies, used to intercept method invocations on outdated objects that need
+	migration. Each proxy class extend the proxied class and override all methods so
+	that Rubah can intercept method calls. At the object layout level, this means
+	that proxies have the same fields on the same offset but a different `_klass`.
+	So, all Rubah needs to do is to install the proxy `_klass` on existing objects
+	to turn them into proxies.
 
-	Between two versions, the vast majority of objects do not need to be migrated
-	because their class has not changed. However, consider the following example:
-	Class A changed, class B did not change and has a field of type A. Of course,
-	we have to migrate every instance of A. However, class B has the same layout in
-	memory in both versions. Rubah just needs to change the code so that the new
-	version treats the new field using the new type.
+	Besides proxies, Rubah also changes the class of existing objects for another
+	reason.  Between two versions, the vast majority of objects do not need to be
+	migrated because their class was not updated. However, consider the following
+	example: Class **A** changed, class **B** did not change and has a field of type
+	**A**. Of course, we have to migrate every instance of **A**. However, class
+	**B** has the same layout in memory in both versions. Rubah just needs to
+	update the code of class **B** to use the field with the correct new type.
 
 	Both this scenarios illustrate the need for Rubah to change the class of
-	existing objects my using the unsafe API to adjust the _klass field on the
-	header. This is the most brittle optimization that Rubah performs. In fact,
+	existing objects by using the unsafe API to adjust the `_klass` field on the
+	object header. This is the most brittle optimization that Rubah performs. In fact,
 	getting it to work was a challenge. In part, because the code the JIT compiler
-	emits assumes that the _klass does not change during the execution of a method.
-	If it does, the JVM may crash with a segfault. So, Rubah is implemented in a way
-	that prevents the code that changes the _klass from being inlined with
-	application code that might use that field.
+	emits assumes that the `_klass` does not change during the execution of a method.
+	If it does, the JVM crashes. So, Rubah is carefully implemented in a way
+	that prevents the code that changes the `_klass` from ever being inlined with
+	application code.
 
-	Also, the garbage collector relies on the _klass to learn the size and
-	structure of the object it is about to visit. No matter what _klass field it
-	reads, the old or the new, both agree on the same information the GC needs to do
-	its job. Therefore, the regular GC operation does not cause the JVM to crash.
+	Besides the JIT compiler, the garbage collector uses the `_klass` to access
+	the size and structure of objects it visits. However, this is not as problematic
+	because both the old and the new `_klass` fields agree on the same information
+	the GC needs to do its job.  Therefore, the regular GC operation does not cause
+	the JVM to crash when Rubah modifies the `_klass` field.
 
 	Note that the alternative to deal with instances of unchanged classes between
-	versions would be to either: (1) Copy them or (2) erase the type of all field to
-	Object and inject the appropriate cast before every bytecode that reads fields.
-	Option (1) would require a deep copy of the whole heap, so we discarded it from
-	the start. Early versions of Rubah implemented option (2), thus adding a steady
-	state overhead of 5%.[^overhead]
+	versions would be to either: (1) Copy them or (2) erase the type of all fields
+	to `java.lang.Object` and inject the appropriate type cast before every bytecode
+	that manipulates fields.  Option (1) would always require a deep copy of the
+	whole heap at every update, so we discarded it from the start. Early versions of
+	Rubah implemented option (2), which added a steady state overhead of
+	5%.[^overhead]
 
+	The following code examples, adapted from class
+	[UnsafeUtils](https://github.com/plum-umd/rubah/blob/master/src/main/java/rubah/runtime/state/migrator/UnsafeUtils.java)
+	in Rubah, shows how to change the class of an existing object by manipulating
+	the `_klass` field:
+	
 <pre><code class="java">
 class A { /* empty */ }
 class B { /* empty */ }
@@ -414,8 +480,6 @@ assert (a instanceof A);
 assert (b instanceof A);
 </code></pre>
 
-The code examples in this section were taken from a class in Rubah called
-[UnsafeUtils](https://github.com/plum-umd/rubah/blob/master/src/main/java/rubah/runtime/state/migrator/UnsafeUtils.java).
 
 [^overhead]:
 
@@ -425,97 +489,82 @@ The code examples in this section were taken from a class in Rubah called
 How to make sun.misc.Unsafe safer
 =================================
 
-Useful as it might be, sun.misc.Unsafe is a proprietary API that will disappear
-in future releases of the HotSpot JVM. There is a JEP draft (TODO link) to
-"create a public API replacement for sun.misc.Unsafe to prevent people from
-accessing a private package in form of a direct memory kind of buffer and a
-support class for other sun.misc.Unsafe operations independently from buffer
-like memory operations".
-
-It looks like the main motivation for this JEP is to bring off-heap buffers to
-the standard API. Off-heap buffers are out of the reach of the
-garbage-collector, and using can improve performance or make performance more
-predictable with no pauses for a garbage-collector cycle.
-
-Rubah, however, relies on features of sun.misc.Unsafe that might disappear. In
-this section, I propose some alternatives to make those features safe so that
-they can be made part of the standard Java API. I do not comment on the
-features Rubah uses that are planned to be ported to the standard API.
+Useful as it may be, `sun.misc.Unsafe` is a proprietary API that will disappear
+or be modified in future releases of the HotSpot JVM.  Rubah relies on features
+of the unsafe API that might disappear.  So, in this section, I propose some
+alternatives to make those features safe so that they can be made part of the
+standard Java API.
 
 * **Identity hash-code**
 
 	The simplest approach, assuming that a method similar to
-	sun.misc.Unsafe.allocateInstance makes it to the standard API, is to add an
-	integer argument that sets the identity hash-code to be the least significant 24
-	bits (the size of a Java hash-code) of that integer argument. TODO: Check that
-	the size of a Java hash-code is actually 24 bits.
+	`sun.misc.Unsafe.allocateInstance` makes it to the standard API, is to add an
+	integer argument that sets the identity hash-code to be the least significant
+	bits (the size of a Java hash-code) of that integer argument.
 
 	Assuming that this method does not make it to the standard API, Rubah could
-	still allocate instances without running any real constructor by adding dummy
-	constructors to every class that do not do anything interesting. Still, Rubah
+	still allocate instances without running any real constructor by injecting dummy
+	constructors to every class that do not do anything interesting. However, Rubah
 	needs to set the identity hash-code of the new object being constructed.
 
-	In this scenario, note that setting the identity hash-code of an object that
-	has just been created, before the method that creates that object makes any
-	reference to the new object visible to any other part of the program, is safe.
-	The invariant that the identity hash-code does not change during the lifetime of
-	the object is kept, except for the code that actually changes the identity
-	hash-code. I claim that this behavior is safe and acceptable.
+	In this scenario, a key observation is that it is safe to set the identity
+	hash-code of any object being constructed before any reference to that object
+	escapes the constructor.  The invariant that the identity hash-code does not
+	change during the lifetime of the object is kept, except for the constructor
+	code that actually changes the identity hash-code. I claim that this behavior is
+	safe and acceptable.
 
-	The bytecode sequence that creates an object involves a NEW instruction and a
-	INVOKESPECIAL instruction to invoke a constructor of the superclass on the newly
-	created object. Between these two bytecodes, the object is instantiated but
-	not constructed. The JVM uses escape analysis to ensure that no references to
-	this object get leaked by, for instance, writing it to some field or passing it
-	as argument to some function. This check is made by the bytecode verifier, and
-	the JVM refuses to load any code that fails this check.
+	The bytecode sequence that creates an object involves a `NEW` instruction and
+	a `INVOKESPECIAL` instruction to invoke a constructor of the superclass on the
+	newly created object. Between these two bytecodes, the object is instantiated
+	but not constructed. The JVM performs escape analysis to reject any bytecode
+	that leaks references to this object by writing it to some field or passing it
+	as argument to some method.
 
 	This is the right moment to set the identity hash-code of the new object. One
-	option is to add a special method to do this and pass the object to that method.
-	However, this requires changing the bytecode verifier to allow this method
-	invocation.
+	option is to add a special API method.  However, this involves passing the
+	instantiated but not constructed object to that method, which makes the bytecode
+	verifier to reject such bytecode.  This option thus require modifications to the
+	bytecode verifier.
 
-	Another option is to add an extra constructor to java.lang.Object that takes
+	Another option is to add an extra constructor to `java.lang.Object` that takes
 	an integer and sets the identity hash-code to that value. The bytecode verifier
 	remains unchanged, but we are now exposing a new constructor that should almost
 	never be used. This problem could be mitigated by making this method invisible
-	to the compiler and only accessible through method handles, which were added in
-	Java 8 to allow invoking methods more efficiently than by using the reflection
-	API.  TODO add link to description of method handles, check if method handles
-	can be used to call constructors. And improve the description of what method
-	handles are.
+	to the compiler and only accessible through reflection.
 
 	Yet another option is to have the developer add a constructor that takes an
 	integer as the first argument and has a special annotation to note that such
 	argument is actually the identity hash-code of the object being constructed. Or,
 	instead of an integer, that argument has a special type (e.g.
-	java.lang.IdentityHashCode), so that it does not collide with any existing
+	`java.lang.IdentityHashCode`), so that it does not collide with any existing
 	constructor that already takes an integer.
 
 * **Changing the class of an object**
 
-	The JVM keeps the invariant that the class of a given object does not change
+	The JVM keeps the invariant that the class of any given object does not change
 	during the lifetime of that object. Therefore, no matter how safe we make this
 	operation, it violates this invariant by design. This is our starting point in
 	making this operation safe.
 
-	Rubah gets away with it because it traverses the heap and fixes references to
-	instances of java.lang.Class. So, if some structure maps classes to objects of
-	that class, Rubah changes the class of every object and the instance of
-	java.lang.Class associated with it (e.g.  Rubah supports updating instances kept
-	in a java.util.EnumMap, which does something similar). TODO link to grepcode
+	Rubah gets away with it in part because it traverses the heap and fixes
+	references to instances of `java.lang.Class`. So, if some structure maps classes
+	to objects of that class, Rubah changes the class of every object and all
+	references to the instance of `java.lang.Class` associated with the outdated
+	class (e.g.  Rubah supports updating instances kept in instances of
+	`java.util.EnumMap`, which does something similar).
 
-	However, finding some way to relax this invariant would lead to efficient
-	implementation of proxies. A proxy, in this sense, is a class that extends the
+	However, finding some way to relax this invariant allows efficient
+	implementations of proxies. A proxy, in this sense, is a class that extends the
 	proxied class, does not define any fields, and overrides all methods to redirect
 	the invocation to some other new method that the developer can customize. From
-	the point of view of the memory model, a proxy looks exactly the same as the
-	proxied instance (same size, same fields at the same offset) except for the
-	_klass pointer. Proxying an object, or turning an existing proxy into a real
-	object would be as simple as a writing one pointer to memory.
+	the point of view of the object memory layout, a proxy looks exactly the same as
+	the proxied instance (same size, same fields at the same offset) except for the
+	`_klass` field in the object header. Proxying an object, or turning an existing
+	proxy into real objects, can be as simple as a writing over the `_klass` field.
 
 	To change the class of an object safely to another class that defines a
-	different set of fields in this way, by changing the _klass pointer, we have to
+	different set of fields in this way, by changing the `_klass` field, we have to
 	place restrictions on how different the set of fields can be. The idea is that
 	the representation of the object in memory should, at least, have the same size.
 	So, we can require the new class to define the same number of fields of the same
@@ -529,16 +578,3 @@ features Rubah uses that are planned to be ported to the standard API.
 	each position is compatible with the respective field on the new type. TODO: add
 	links to the CLOS meta-object protocol that does this, the common LISP should be
 	available on-line.
-
-* Direct field access
-  * Field handlers? Research this
-* Identity hash code
-  * Idea:
-    * Only allow this on the JVM level, between NEW and calling the super constructor
-    * The JVM already does escape analysis to ensure the new instance does not escape
-    * Port with to Java with a special annotated constructor?
-* Change _klass
-  * Safe for subclasses that do not add any fields
-    * Just ensure the JIT knows about this
-  * For the other case, use a CLOS like approach
-    * Sample code
